--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "dotenv": "^16.1.4",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
+    "react-responsive-carousel": "^3.2.23",
     "tailwindcss": "3.3.2"
+  },
+  "resolutions": {
+    "react-map-gl": "5.2.12"
   }
 }
