--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "react-icons": "^4.9.0",
     "react-responsive-carousel": "^3.2.23",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "tailwind-scrollbar": "^3.0.4"
   }
 }
